kubernetes/core/cert-manager/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cainjector
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: cainjector
      app.kubernetes.io/instance: cert-manager-cert-manager
      app.kubernetes.io/name: cainjector
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: prometheus
      toPorts:
        - ports:
            - port: "9402"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: startupapicheck
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: startupapicheck
      app.kubernetes.io/instance: cert-manager-cert-manager
      app.kubernetes.io/name: startupapicheck
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: cert-manager-cert-manager
      app.kubernetes.io/name: cert-manager
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: prometheus
      toPorts:
        - ports:
            - port: "9402"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: webhook
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: webhook
      app.kubernetes.io/instance: cert-manager-cert-manager
      app.kubernetes.io/name: webhook
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
  ingress:
    - fromEntities:
        - kube-apiserver
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: prometheus
      toPorts:
        - ports:
            - port: "9402"
              protocol: TCP
